Tue May 26 21:35:13 2015  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* include/ruby/defines.h (RUBY_ATTR_ALLOC_SIZE): fix condition.

Mon May 25 22:35:58 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb (rel): after the relations is changed,
	  @changesets is no longer right.

Mon May 25 11:27:14 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/win32.c (setup_overlapped): seek to the file end only when
	  writing (mode:a), not reading (mode:a+, read).

Mon May 25 00:27:37 2015  Benoit Daloze  <eregontp@gmail.com>

	* numeric.c (Numeric#negative?): [DOC] Fix call-seq.
	  Patch by @yui-knk. [Fixes GH-908]

Sun May 24 01:35:22 2015  Koichi Sasada  <ko1@atdot.net>

	* debug.c (ruby_debug_print_id): use rb_id2name() for fprintf().

Sat May 23 18:38:46 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* man/*.1: updated dates in man pages.
	  [ruby-dev:48988] [Bug #11171]

Sat May 23 03:10:58 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_write_console): should return the count of
	  actually eaten characters, include escape sequences.

Fri May 22 22:36:14 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/prime.rb: Remove obsolete Prime.new
	  patch by Ajay Kumar. [Fixes GH-891]

Fri May 22 21:13:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_sym_count): move `rb_sym_all_symbols`
	  to a symbol.c specific section.  a part of patch by Lourens
	  Naude.

Fri May 22 20:56:33 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* complex.c (f_complex_polar): simple bug reproduced only when y is
	  a float but x is not a float.

Fri May 22 19:42:06 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_spawn_process): do not discard global escape
	  status.  [ruby-core:69304] [Bug #11166]

	* process.c (rb_execarg_spawn): extract the start procedure in a
	  parent process with ensuring the end procedure.

Fri May 22 16:48:32 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
